feat: 골룸 노드 목록 조회 시 노드 설명과 이미지 반환하도록 수정